...
      android:id="@+id/txt_balance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/coins"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/btn_die"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn_die"
...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="DuplicateSpeakableTextCheck" />

  <Button
      android:id="@+id/btn_two_or_more"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="210dp"
      android:text="@string/two_or_more"
      android:onClick="onClickTwoOrMore"
      app:layout_constraintEnd_toEndOf="parent"
...
